--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+
+#  data jpq Mysql Connection db name teu2410crud
+spring.datasource.url=jdbc:mysql://localhost:3306/teu2410crud?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=beza
+spring.datasource.password=beza1234$
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#turn off banner
+spring.main.banner-mode=off
+
+#reduce logging lvl to warning
+logging.level.root=warn
