--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-
+# port
+server.port=8080
 
 #  data jpq Mysql Connection db name teu2410crud
 spring.datasource.url=jdbc:mysql://localhost:3306/teu2410crud?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
