Added Controller Class , Mapping and Methods, fixed the date created not posting on the database, added local time time stamp, added search by email method, closes #3

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 #  data jpq Mysql Connection db name teu2410crud
-spring.datasource.url=jdbc:mysql://localhost:3306/teu2410crud?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/teu2410crud?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=America/Bogota
 spring.datasource.username=beza
 spring.datasource.password=beza1234$
 
